# dais-2025-apps-ci

./: .gitignore  Makefile  app.yml  databricks.yml  pyproject.toml
.github/workflows/: on_push.yml  on_release.yml
hooks/: build.py
src/dais_2025_apps_ci/: __init__.py  app.py
src/dais_2025_apps_ci/static/: index.html
tests/: test_app.py
