[project]
name = "dais-2025-apps-ci"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "renardeinside", email = "polarpersonal@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "uvicorn>=0.34.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/dais_2025_apps_ci/_version.py"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "hatchling>=1.27.0",
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.hatch.build.hooks.custom]
path = "hooks/build.py"
